fix popup width on mobile

--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -64,6 +64,6 @@
 
 @media screen and (max-width: 767px) {
    .popup_container {
-      width: 50%;
+      width: 80%;
    }
 }
